final-commit-v2 - fixed non collapsable Quality title. fixed sine style issues.

--- a/src/components/common/FilterSidebar.scss
+++ b/src/components/common/FilterSidebar.scss
@@ -25,6 +25,7 @@
         color: gray;
         font-weight: 600;
         font-size: 14px;
+        cursor: pointer;
       }
 
       &__name-input {
