--- a/src/components/common/PromotionAside.scss
+++ b/src/components/common/PromotionAside.scss
@@ -1,7 +1,7 @@
 .promotion-banner {
   display: flex;
   flex-direction: column;
-  margin: 20px 10px 0 30px;
+  margin: 20px 10px 20px 30px;
   flex-basis: 10%;
   border-bottom: 3px solid #DC140A;
   height: fit-content;
